Change log for zeit.web
=======================

2.79 (unreleased)
-----------------

- FIX: Support non-ascci URLs in "komplettansicht" redirect


2.78 (2016-05-02)
-----------------

- MAINT: Update breadcrumb microdata

- FIX: Show copyright for article header image


2.77 (2016-04-29)
-----------------

- ZON-3039: Render ZCO column teasers as default in ZON

- ZON-2870: Add login cut marks for framebuilder in campus, too

- ZON-3031: Add advertorial teaser

- ZON-2974: Add ZEIT Campus launch gimmick (animated header image)

- ZON-3033: Introduce Fallback Image for ZCO Teaser

- ZON-2504: Add Highlight-Box (Quiz/Cards) to ZEIT Campus

- ZON-3048: Change sharing bar colors

- ZON-3047: Fix mobile glitches

- ZON-3052: Resize ZCO kicker logo on ZON topic teaser

- ZON-3049: Add new button to campus item in main navigation

- ZON-3051: move print/pdf function to core

- ZON-3032: Update schema.org publisher microdata

- ZON-3054: Fix campus navigation links and tracking

- MAINT: Use any teaser layout that is set in XML, regardless of availability rules


2.76 (2016-04-28)
-----------------

- ZON-3034: show Anzeige label mobile as well

- ZON-3019: Place adplace7 via cpextra

- ZON-2971: Mark ZEIT Campus teasers on ZON centerpages

- BUG-409: Fix keywords for ZEIT Campus AdController


2.75 (2016-04-27)
-----------------

- HOTFIX: Make author list work again after area ranking was moved to core

- ZON-3023: Use 1st teaser image as topic teaser image

- ZON-3025: Change Wording on several places

- ZON-2877: Update webtrekk javascript, make it configurable via settings

- FIX: Fix teaser layout, default ZCO article layout

- FIX: Add new home routes and change pagination for campus

- FIX: Correct links in campus navigation

- MAINT: Don't try another community request when the health check already failed

- MAINT: Unify framebuilder banner_channel for ZON+ZCO

- MAINT: Configure grunt watch task dynamically


2.74 (2016-04-26)
-----------------
