@@ -3,7 +3,7 @@
     <h2 class="toolbox__headline">Was soll ich studieren?</h2>
     <ul class="toolbox__list">
         <li class="toolbox__item">
-            <a href="http://studiengaenge.zeit.de/sit?wt_zmc=fix.int.zonpmr.zeitde.funktionsbox_studium.sit.teaser.button.&utm_medium=fix&utm_source=zeitde_zonpmr_int&utm_campaign=funktionsbox_studium&utm_content=sit_teaser_button_x" class="toolbox__link" title="Studium-Interessentest">
+            <a href="http://studiengaenge.zeit.de/sit" class="toolbox__link" title="Studium-Interessentest">
                 <h3 class="toolbox__title">Welches Studium passt zu mir?</h3>
                 <p class="toolbox__text">
                     Interessen entdecken mit dem Studium-Interessentest (SIT)
@@ -13,7 +13,7 @@
             </a>
         </li>
         <li class="toolbox__item">
-            <a href="http://studiengaenge.zeit.de/studienangebote?wt_zmc=fix.int.zonpmr.zeitde.funktionsbox_studium.suma.teaser.button.&utm_medium=fix&utm_source=zeitde_zonpmr_int&utm_campaign=funktionsbox_studium&utm_content=suma_teaser_button_x" class="toolbox__link" title="Suchmaschine für Studiengänge">
+            <a href="http://studiengaenge.zeit.de" class="toolbox__link" title="Suchmaschine für Studiengänge">
                 <h3 class="toolbox__title">Wo kann ich studieren?</h3>
                 <p class="toolbox__text">
                     Überblick erhalten mit der Suchmaschine für Studiengänge
@@ -23,7 +23,7 @@
             </a>
         </li>
         <li class="toolbox__item">
-            <a href="http://ranking.zeit.de/che2016/de/faecher?wt_zmc=fix.int.zonpmr.zeitde.funktionsbox_studium.che.teaser.button_ohne_fach.x&utm_medium=fix&utm_source=zeitde_zonpmr_int&utm_campaign=funktionsbox_studium&utm_content=che_teaser_button_ohne_fach_x" class="toolbox__link" title="CHE Hochschulranking">
+            <a href="http://ranking.zeit.de/che2016/de/" class="toolbox__link" title="CHE Hochschulranking">
                 <h3 class="toolbox__title">Welche Uni ist die Beste für mich?</h3>
                 <p class="toolbox__text">
                     Universitäten vergleichen mit dem CHE Hochschulranking
@@ -34,6 +34,6 @@
         </li>
     </ul>
     <div class="toolbox__footer">
-        <a href="http://studiengaenge.zeit.de/sit?wt_zmc=fix.int.zonpmr.zeitde.funktionsbox_studium.sit.teaser.button.&utm_medium=fix&utm_source=zeitde_zonpmr_int&utm_campaign=funktionsbox_studium&utm_content=sit_teaser_button_x" class="toolbox__sit-link">Was soll ich studieren? {{ lama.use_svg_icon('arrow-right', 'toolbox__arrow', view.package) }}</a>
+        <a href="http://studiengaenge.zeit.de/artikel/was-soll-ich-studieren.html" class="toolbox__sit-link">Was soll ich studieren? {{ lama.use_svg_icon('arrow-right', 'toolbox__arrow', view.package) }}</a>
     </div>
 </aside>
